--- a/NASA Client/NASA Client/Base.lproj/LaunchScreen.storyboard
+++ b/NASA Client/NASA Client/Base.lproj/LaunchScreen.storyboard
@@ -34,10 +34,17 @@
                                     <constraint firstAttribute="height" constant="60" id="twb-Gt-XWG"/>
                                 </constraints>
                                 <attributedString key="attributedText">
-                                    <fragment content="NASA Mars Photos Library ">
+                                    <fragment content="NASA Mars Photos Library  ">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <font key="NSFont" size="16" name="Menlo-BoldItalic"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="test project">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <font key="NSFont" size="12" name="ComicSansMS"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
